<resources>
    <string name="app_name">HandyCalc</string>
    <string name="buttonTwoText">2</string>
    <string name="buttonOneText">1</string>
    <string name="buttonThreeText">3</string>
    <string name="buttonFourText">4</string>
    <string name="buttonFiveText">5</string>
    <string name="buttonSixText">6</string>
    <string name="buttonSevenText">7</string>
    <string name="buttonEightText">8</string>
    <string name="buttonNineText">9</string>
    <string name="buttonDotText">.</string>
    <string name="buttonZeroText">0</string>
    <string name="buttonEqualText">=</string>
    <string name="buttonAddText">+</string>
    <string name="buttonSubText">-</string>
    <string name="buttonMultiplyText">&#xd7;</string>
    <string name="buttonDivText">&#xf7;</string>
    <string name="buttonCText">C</string>
    <string name="buttonPercentageText">%</string>
    <string name="buttonBracesText">( )</string>
    <string name="buttonMemoryText">M</string>
</resources>
