<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.amabdelsalam.handycalc.MainActivity">

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonOneText"
        android:id="@+id/buttonOne"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="169dp"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:onClick="oneClicked" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonTwoText"
        android:id="@+id/buttonTwo"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_alignTop="@+id/buttonOne"
        android:layout_toRightOf="@+id/buttonOne"
        android:layout_toEndOf="@+id/buttonOne"
        android:onClick="twoClicked" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonThreeText"
        android:id="@+id/buttonThree"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_alignTop="@+id/buttonTwo"
        android:layout_toRightOf="@+id/buttonTwo"
        android:layout_toEndOf="@+id/buttonTwo"
        android:onClick="threeClicked" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonFourText"
        android:id="@+id/buttonFour"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_below="@+id/buttonOne"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="fourClicked" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonFiveText"
        android:id="@+id/buttonFive"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_alignTop="@+id/buttonFour"
        android:layout_toRightOf="@+id/buttonFour"
        android:layout_toEndOf="@+id/buttonFour"
        android:onClick="fiveClicked" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonSixText"
        android:id="@+id/buttonSix"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_alignTop="@+id/buttonFive"
        android:layout_toRightOf="@+id/buttonFive"
        android:layout_toEndOf="@+id/buttonFive"
        android:onClick="sixClicked" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonSevenText"
        android:id="@+id/buttonSeven"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_below="@+id/buttonFour"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="sevenClicked" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonEightText"
        android:id="@+id/buttonEight"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_below="@+id/buttonFive"
        android:layout_toRightOf="@+id/buttonSeven"
        android:layout_toEndOf="@+id/buttonSeven"
        android:onClick="eightClicked" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonNineText"
        android:id="@+id/buttonNine"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_below="@+id/buttonFive"
        android:layout_toRightOf="@+id/buttonEight"
        android:layout_toEndOf="@+id/buttonEight"
        android:onClick="nineClicked" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonDotText"
        android:id="@+id/buttonDot"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_below="@+id/buttonSeven"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonZeroText"
        android:id="@+id/buttonZero"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_below="@+id/buttonSeven"
        android:layout_toRightOf="@+id/buttonDot"
        android:layout_toEndOf="@+id/buttonDot"
        android:onClick="zeroClicked" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonMultiplyText"
        android:id="@+id/buttonMultiply"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_above="@+id/buttonSix"
        android:layout_toRightOf="@+id/buttonThree"
        android:layout_toEndOf="@+id/buttonThree"
        android:onClick="multiplyClicked" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonSubText"
        android:id="@+id/buttonSub"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_alignTop="@+id/buttonSix"
        android:layout_toRightOf="@+id/buttonSix"
        android:layout_toEndOf="@+id/buttonSix"
        android:onClick="minusClicked" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonAddText"
        android:id="@+id/buttonAdd"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_below="@+id/buttonSix"
        android:layout_toRightOf="@+id/buttonNine"
        android:layout_toEndOf="@+id/buttonNine"
        android:onClick="plusClicked" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonEqualText"
        android:id="@+id/buttonEqual"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_below="@+id/buttonNine"
        android:layout_toRightOf="@+id/buttonNine"
        android:layout_toEndOf="@+id/buttonNine"
        android:onClick="equalClicked" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonMemoryText"
        android:id="@+id/buttonMemory"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_below="@+id/buttonEight"
        android:layout_toRightOf="@+id/buttonZero"
        android:layout_toEndOf="@+id/buttonZero" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonDivText"
        android:id="@+id/buttonDiv"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_above="@+id/buttonThree"
        android:layout_toRightOf="@+id/buttonThree"
        android:layout_toEndOf="@+id/buttonThree"
        android:onClick="divideClicked" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonPercentageText"
        android:id="@+id/buttonPercentage"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_alignTop="@+id/buttonDiv"
        android:layout_toLeftOf="@+id/buttonDiv"
        android:layout_toStartOf="@+id/buttonDiv" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonBracesText"
        android:id="@+id/buttonBraces"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_alignTop="@+id/buttonPercentage"
        android:layout_toRightOf="@+id/buttonOne"
        android:layout_toEndOf="@+id/buttonOne" />

    <Button
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:text="@string/buttonCText"
        android:id="@+id/buttonC"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:layout_alignTop="@+id/buttonBraces"
        android:layout_toLeftOf="@+id/buttonBraces"
        android:layout_toStartOf="@+id/buttonBraces"
        android:onClick="cClicked" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textFieldScreen"
        android:enabled="false"
        android:textSize="@dimen/abc_action_button_min_width_material"
        android:layout_above="@+id/buttonDiv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="0"
        android:layout_alignParentRight="false"
        android:textAlignment="textEnd"
        android:textColor="#000000" />

</RelativeLayout>
